Added and routed an instructions page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,7 @@
                 <% } else { %>
                         <li><a href="/login" class="text-terminal-light-gray no-underline hover:underline">LOGIN</a></li>
                 <% } %>
+                <li><a href="/instructions" class="text-terminal-light-gray no-underline hover:underline">INSTRUCTIONS</a> </li>
                 <li><a href="/characters" class="text-terminal-light-gray no-underline hover:underline">CHARACTERS</a></li>
                 <li><a href="/leaderboard" class="text-terminal-light-gray no-underline hover:underline">LEADERBOARD</a></li>
             </ul>
